fix: Resolve some inspection results